--- a/.github/kapybro/config.yml
+++ b/.github/kapybro/config.yml
@@ -104,8 +104,7 @@ issues:
 prs:
   triage: *triage
   feedback-management: *feedback-management
-  locking:
-    enabled: *locking
+  locking: *locking
 
   auto-rebase:
     enabled: false
